# spot-rl-example

./: .gitignore  .gitmodules  README.md  inspect_hdf5.py  print_urdf_masses.py  pyproject.toml  robot_state.json  spot_isaac_real.hdf5  spot_isaac_real_commands.json  spot_isaac_sim.hdf5  test_hdf5_logger.py  test_keys.py  test_log.h5  test_rosbag.py  test_vel_cmd.py  test_vels.py
docker/: Dockerfile  docker-compose.yaml
python/: spot_rl_demo.py
python/hid/: keyboard.py
python/orbit/: observations.py  onnx_command_generator.py  orbit_configuration.py  orbit_constants.py
python/spot/: constants.py  mock_spot.py
rl_deploy/: compare_actuator_loads.py  plot_hdf5.py  plot_hdf5_v2.py  print_timing_diagnostics.py  requirements.txt  spot_rl_demo.py  spot_rl_isaac.py  spot_with_arm.urdf
rl_deploy/configs/: agent.yaml  env.yaml  policy.onnx
rl_deploy/hid/: keyboard.py  terminal_keyboard.py
rl_deploy/isaaclab/: spot_env.py
rl_deploy/isaaclab_spot/: isaac_model.py  isaac_spot.py  spot_env.py  spot_knee_actuator.py  test_isaac_spot.py  test_knee_actuator.py
rl_deploy/orbit/: observations.py  onnx_command_generator.py  orbit_configuration.py  orbit_constants.py
rl_deploy/relic/: interlimb_env_cfg.py  play.py
rl_deploy/scripts/: compare_actuator_loads.py  compare_actuator_loads_hip.py  plot_acquisition_frequencies.py  plot_hdf5.py  replay_and_compare_sim_real.py  validate_mock_spot_using.hdf5.py
rl_deploy/spot/: constants.py  isaac_model.py  isaac_spot.py  mock_spot.py  spot.py  spot_env.py  spot_with_arm.urdf
rl_deploy/spot_rl_example.egg-info/: SOURCES.txt
rl_deploy/utils/: event_divider.py  hdf5_logger.py  urdf.py
rl_deploy/utils/scripts/: export_command_protos_to_json.py  print_hdf5_state.py
spot_rl_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
